wrap piece in a container which is not scaled down to ensure the draggable piece dimensions are unchanged even when visually the initial piece appears smaller

--- a/src/components/piece/Piece.module.scss
+++ b/src/components/piece/Piece.module.scss
@@ -1,3 +1,10 @@
+.container {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .piece {
   position: absolute;
   transition: transform 100ms;
